--- a/packages/material/scss/dataviz/_variables.scss
+++ b/packages/material/scss/dataviz/_variables.scss
@@ -94,8 +94,6 @@ $chart-title-font-size: 1.143em !default;
 $chart-pane-title-font-size: $chart-label-font-size !default;
 $chart-pane-title-font-weight: $font-weight-normal !default;
 
-$chart-inactive: rgba( $component-text, .5 ) !default;
-
 /// The color of the Chart grid lines (major).
 /// @group charts
 $chart-major-lines: rgba( if( $dark-theme, $white, $black ), .08 ) !default;
@@ -104,9 +102,12 @@ $chart-major-lines: rgba( if( $dark-theme, $white, $black ), .08 ) !default;
 /// @group charts
 $chart-minor-lines: rgba( if( $dark-theme, $white, $black ), .04 ) !default;
 
+$chart-inactive: rgba( $component-text, .5 ) !default;
 $chart-area-opacity: .6 !default;
 $chart-area-inactive-opacity: .1 !default;
 $chart-line-inactive-opacity: .3 !default;
+
+$chart-tooltip-transition: left 300ms cubic-bezier(0, .33, .19, 1), top 300ms cubic-bezier(0, .33, .19, 1) !default;
 
 $chart-bg: $component-bg !default;
 $chart-text: $component-text !default;
